--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,15 @@ nav{
 	z-index:1;
 }
 li {
-	text-decoration:none;
 	display: inline-block;
 	padding-left:10px;
-	color:white;
+	color:#5c3d3d;
+	background-color:white;
 }
 li:last-child {
 	padding-right:25px;
+}
+a {
 }
 .pimg1, .pimg2 {
 	position:relative;
@@ -58,6 +60,17 @@ li:last-child {
 	float:left;
 	border: 15px solid #5c3d3d;
 }
+.pimg4 {
+	background-image:url('../images/pimg4.jpg');
+	position:relative;
+	background-position:center;
+	background-repeat:no-repeat;
+	background-size:150px 200px;
+	min-height:200px;
+	min-width:145px;
+	float:left;
+	border: 10px solid #5c3d3d;
+}
 .ptext, .border{
 	background-color:#5c3d3d;
 	color:#1e0000;
@@ -79,9 +92,36 @@ li:last-child {
 	text-align:center;
 	padding:50px 80px;
 }
+#about {
+	display:flex;
+	text-align:left;
+}
 .container {
 	border:#5c3d3d 15px solid;
 	display:center;
+}
+.container-1 {
+	display:flex;
+	justify-content:space-between;
+	text-align:center;
+	padding:15px;
+}
+h3, h2 {
+	color:#5c3d3d;
+}
+h2 {
+	margin-right:15px;
+}
+.col {
+	color:grey;
+}
+#ts {
+	display:block;
+	text-align:center;
+	padding:0;
+}
+i {
+	color:#5c3d3d;
 }
 /*.row, .row-a, .row-b {
 	display: flex;
@@ -92,6 +132,8 @@ li:last-child {
     padding: 8px;
 	margin: 15px;
 	margin-top:50px;
+	
+	background-color:#5c3d3d;
 }*/
 .container-a {
 	display:flex;
