--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body, html {
 	padding:0;
 	background-color:#f3f1f1;
 }
+/* Nav */
 nav{
 	background:#4a1c1c;
 	min-width:290px;
@@ -19,20 +20,18 @@ nav{
 	text-align:right;
 	z-index:1;
 }
-li {
-	display: inline-block;
-	padding-left:10px;
-	color:#4a1c1c;
-	background-color:#f3f1f1;
+dd {
+	display:inline-block;
+	color:#f3f1f1;
 }
-li:last-child {
+dd:last-child {
 	margin-right:10px;
-
 	padding-right:5px;
 }
 a {
 	text-align:left;
 }
+/* Pictures */
 .pimg1, .pimg2 {
 	position:relative;
 	opacity:0.80;
@@ -68,20 +67,29 @@ a {
 	background-image:url('../images/pimg4.jpg');
 	background-repeat:no-repeat;
 	background-size:150px 200px;
+	display:block;
 	height:180px;
 	width:150px;
-	border: 10px solid #4a1c1c;
-	margin-left:35%;
+	border: 5px solid #4a1c1c;
+    margin-left: auto;
+    margin-right: auto;
 }
 .ptext, .border{
 	background-color:#4a1c1c;
 	color:#1e0000;
 }
+/* texts */
 h1 {
 	text-decoration:underline;
 	font-size:45px;
 	padding:0;
 	margin:0;
+}
+h3, h2 {
+	color:#4a1c1c;
+}
+h2 {
+	margin-right:15px;
 }
 .ptext, .border, .trans{
 	background-color:transparent;
@@ -101,7 +109,7 @@ h1 {
 	grid-template-columns:repeat (3,1fr);
 	grid-gap:2em;
 	text-align:center;
-	padding:50px 80px;
+	padding:50px 50px;
 	margin-left:15px;
 }
 /*#about {
@@ -109,21 +117,23 @@ h1 {
 	text-align:left;
 	
 }*/
-.container {
-	border:#4a1c1c 15px solid;
-	display:center;
-}
+/* Skills */
 .container-1 {
 	display:flex;
 	justify-content:space-between;
 	text-align:center;
 	padding:15px;
 }
-h3, h2 {
-	color:#4a1c1c;
+#web {
+	display:block;
+	text-align:center;
+	padding-top:25px;
+	padding-bottom:0;
 }
-h2 {
-	margin-right:15px;
+li {
+	display: inline-block;
+	padding-left:10px;
+	color:#4a1c1c;
 }
 .col {
 	color:grey;
@@ -152,26 +162,40 @@ i {
 	
 	background-color:#5c3d3d;
 }*/
+/* Projects */
+.container {
+	border:#4a1c1c 15px solid;
+	display:center;
+}
+
 .container-a {
 	display:flex;
-	justify-content:space-between;
 	flex-wrap:wrap;
+	justify-content:space-between;
+
+	
+}
+.box1 {
 	margin-top:55px;
+}
+.box8 {
 	margin-bottom:45px;
 }
+
 #projects {
 	margin-top:55px;
 	margin-bottom:45px;
 }
+/* footer */
 footer{
 	color:#fff;
 	display:inline-block;
 	background-color:#4a1c1c;
 	color:white;
-  width:100%;
-  text-align:center;
+	width:100%;
+	text-align:center;
 }
-
+/* Media Queries */
 @media (max-width:568px){
 	.pimg1, .pimg2 {
 		background-attachment:scroll;
