--- a/css/style.css
+++ b/css/style.css
@@ -195,12 +195,32 @@ footer{
 	.pimg1, .pimg2 {
 		background-attachment:scroll;
 	}
-	.container, .container-1, .container-a, li{
+	.container, .container-1, .container-a {
 		display:flex;
 		flex-wrap:wrap;
+		text-align:center;
+	}
+	#about, #skills {
+		display:block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	#web {
+		padding:0;
+	}
+	.section {
+		margin-left:0;
+		text-align:center;
+	}
+	li {
+		text-align:center;
+		
+	}
+	container-1{
+		text-align:center;
 	}
 	nav {
-		height: 150px;
+		height: 80px;
 	}
 	h1 {
 		text-decoration:none;
